--- a/my_website/static/my_website/css/style.css
+++ b/my_website/static/my_website/css/style.css
@@ -18,7 +18,7 @@ body {
 .main-title {
     text-align: center;
     margin-bottom: 30px;
-    border-bottom: 3px solid #000;
+    border-bottom: #4CAF50;
     display: table;
     margin-left: auto;
     margin-right: auto;
@@ -74,7 +74,7 @@ hr {
 h2,
 h3 {
     margin-bottom: 10px;
-    color:#4CAF50;
+    color: #4CAF50;
 }
 
 p {
