--- a/my_website/static/my_website/css/style.css
+++ b/my_website/static/my_website/css/style.css
@@ -18,11 +18,12 @@ body {
 .main-title {
     text-align: center;
     margin-bottom: 30px;
-    border-bottom: #4CAF50;
+    border-bottom: 3px solid #000;
     display: table;
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 5px;
+    color: #4CAF50;
 }
 
 .row {
